0.6.6/_sources/gallery/without_gui_qt.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/without_gui_qt.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_without_gui_qt.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_without_gui_qt.py:


napari without gui_qt
=====================

Alternative to using napari.gui_qt() context manager.

This is here for historical purposes, to the transition away from
the "gui_qt()" context manager.

.. tags:: historical

.. GENERATED FROM PYTHON SOURCE LINES 12-42



.. image-sg:: /gallery/images/sphx_glr_without_gui_qt_001.png
   :alt: without gui qt
   :srcset: /gallery/images/sphx_glr_without_gui_qt_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Maximum value 255
    Your viewer has the following layers:
       Image  : 1






|

.. code-block:: Python


    from collections import Counter

    from skimage import data

    import napari

    viewer = napari.Viewer()
    layer = viewer.add_image(data.astronaut(), rgb=True)

    # You can do anything you would normally do with the viewer object
    # like take a
    screenshot = viewer.screenshot()

    print('Maximum value', screenshot.max())

    # To see the napari viewer and interact with the graphical user interface,
    # use `napari.run()`.  (it's similar to `plt.show` in matplotlib)
    # If you only wanted the screenshot then you could skip this entirely.
    # *run* will *block execution of your script* until the window is closed.
    if __name__ == '__main__':
        napari.run()

        # When the window is closed, your script continues and you can still inspect
        # the viewer object.  For example, add click the buttons to add various layer
        # types when the window is open and see the result below:

        print('Your viewer has the following layers:')
        for name, n in Counter(type(x).__name__ for x in viewer.layers).most_common():
            print(f'   {name:<7}: {n}')


.. _sphx_glr_download_gallery_without_gui_qt.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: without_gui_qt.ipynb <without_gui_qt.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: without_gui_qt.py <without_gui_qt.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: without_gui_qt.zip <without_gui_qt.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
